--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,24 @@
 /* You can add global styles to this file, and also import other style files */
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+/* .green-snackbar {
+    background: rgb(0, 239, 40);
+    color: rgb(192, 0, 0);
+    border-radius: 20px;
+}
+.green-snackbar button {
+    background-color: rgb(0, 175, 29);
+    color: rgb(197, 8, 8);
+    border: none;
+}
+.red-snackbar {
+    background: #F44336;
+    color: #430000;
+    border-radius: 20px;
+}
+.red-snackbar button {
+    background-color: #F44336;
+    color: rgb(126, 8, 8) !important;
+    border: none;
+} */
