--- a/src/app/components/home/product/product.component.css
+++ b/src/app/components/home/product/product.component.css
@@ -1,6 +1,6 @@
 span{
   /* color: rgb(159, 0, 0); */
-  color: rgb(255, 226, 226);
+  color: rgb(218, 218, 218);
   font-weight: 600;
   font-size: 1.2rem;
   letter-spacing: 5px;
@@ -12,5 +12,17 @@ img{
   transform: scale(1.2);
   transition: all 0.1s ease-in-out 0.01s;
   cursor: pointer;
-
+}
+.priceDiv{
+  border: 1px solid rgba(128, 128, 128, 0.519);
+}
+.name{
+  letter-spacing: 1px;
+  text-transform: uppercase;
+}
+.addToCart{
+  color: goldenrod;
+}
+.addToCart:hover{
+  opacity: 0.7;
 }
