--- a/src/app/components/singup/singup.component.html
+++ b/src/app/components/singup/singup.component.html
@@ -2,7 +2,7 @@
 
   <div class="w-50 mx-auto text-light formDiv" style="box-shadow: 0.2px 0.2px 10px 0.3px goldenrod;">
 
-    <form class="w-75 mx-auto" #signUpForm="ngForm" (submit)="onSignUp(signUpForm)">
+    <form class="w-75 mx-auto" #signUpForm="ngForm" >
       <div class="mb-3">
         <label for="name" class="form-label">Name *</label>
         <input type="text" class="form-control bg-dark text-light " id="name" name="name" aria-describedby="name" required ngModel #name="ngModel">
@@ -59,12 +59,22 @@
           </p>
         </div>
       </div>
+      <div class="mb-3" *ngIf="showOtp" >
+        <label for="otp" class="form-label mx-auto">OTP * </label>
+        <input type="number" class="form-control bg-dark text-light " name="otp" id="otp" required ngModel #otp="ngModel">
+        <div class="invalid-div pass-div" *ngIf="!otp.valid && otp.touched">
+          <p class="invalid-text">
+            Please Enter OTP !
+          </p>
+        </div>
+        <button class="btn btn-success my-2"  (click)="onSubmitOtp(otp.value,signUpForm)">Submit</button>
+      </div>
       <div class="invalid-div pass-div" *ngIf="password.value!=confirmPassword.value">
         <p class="invalid-text">
           Password and Confirm Password must be same !
         </p>
       </div>
-      <button type="submit" class="btn btn-warning">SignUp</button>
+      <button type="submit" class="btn btn-warning" (click)="onSignUp(signUpForm)" *ngIf="!showOtp">SignUp</button>
     </form>
 
   </div>
